--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 <body>
     <h1>this is a mauhariya</h1>
+    <table   >
+
+    </table>
     <script src="script.js"></script>
 </body>
 </html>
